--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.23",
     "next": "^15.1.6",
     "next-intl": "^3.26.3",
